--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "node01",
+  "name": "express-server-01",
   "version": "1.0.0",
-  "description": "",
+  "description": "To get started, please see the [Celbridge documentation](https://celbridge.org).",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
+  "type": "commonjs",
   "dependencies": {
+    "@faker-js/faker": "^10.2.0",
     "express": "^5.2.1"
-  },
-  "devDependencies": {
-    "@faker-js/faker": "^10.2.0"
   }
 }
